--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 rvm:
   - 1.8.7
-  - 1.9.2
-  - 1.9.3
-script: bundle exec rake spec:coverage
+#  - 1.9.2
+#  - 1.9.3
+script: bundle exec rake spec
+#script: bundle exec rake spec:coverage
 notifications:
   email: false
