--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,7 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-
-# RubyMine
+Gemfile.lock
+tester.rb
+coverage/
+pkg/
+utils/
 .idea/
+.yardoc/
