--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
 rvm:
-  - 1.9.3
   - 2.0.0
-  - rbx-19mode
+  - 2.1.0
+  - rbx
 script: bundle exec rake spec:coverage
 gemfile: .travis-gemfile
 notifications:
