--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - 2.0.0
   - 2.1.0
-  - rbx
+  - rbx-2.2.6
 script: bundle exec rake spec:coverage
 gemfile: .travis-gemfile
 notifications:
