Refactored, updated dependencies and linted code.

--- a/config/devdnsd_config.sample
+++ b/config/devdnsd_config.sample
@@ -1,23 +1,23 @@
 config.log_file = "/tmp/devdnsd-test-log.log"
 
-config.add_rule("match_1.dev", "10.0.1.1")
+config.add_rule(match: "match_1.dev", reply: "10.0.1.1")
 
-config.add_rule("match_2.dev", "10.0.2.1", :MX)
+config.add_rule(match: "match_2.dev", reply: "10.0.2.1", type: :MX)
 
-config.add_rule("match_3.dev") do "10.0.3.1" end
+config.add_rule(match: "match_3.dev") do "10.0.3.1" end
 
-config.add_rule("match_4.dev", :CNAME) do "cowtech.it" end
+config.add_rule(match: "match_4.dev", type: :CNAME) do "cowtech.it" end
 
-config.add_rule(/match_5_(\d+)\.dev/, "ns.cowtech.it", :NS)
+config.add_rule(match: /match_5_(\d+)\.dev/, reply: "ns.cowtech.it", type: :NS)
 
-config.add_rule(/match_6_(\d+).dev/, "10.0.6.$1", :PTR)
+config.add_rule(match: /match_6_(\d+).dev/, reply: "10.0.6.$1", type: :PTR)
 
-config.add_rule(/match_7_(\d+).dev/) do "10.0.7.$1" end
+config.add_rule(match: /match_7_(\d+).dev/) do "10.0.7.$1" end
 
-config.add_rule(/match_8_(\d+).dev/, :PTR) do "10.0.8.$1" end
+config.add_rule(match: /match_8_(\d+).dev/, type: :PTR) do "10.0.8.$1" end
 
-config.add_rule("match_9.dev") do false end
+config.add_rule(match: "match_9.dev") do false end
 
-config.add_rule("match_10.dev", [:A, :MX]) do |match, type, transaction| type == :A ? "10.0.10.1" : "10.0.10.2" end
+config.add_rule(match: "match_10.dev", type: [:A, :MX]) do |match, type, transaction| type == :A ? "10.0.10.1" : "10.0.10.2" end
 
-config.add_rule("quit.dev") do DevDNSd::Application.quit end
+config.add_rule(match: "quit.dev") do DevDNSd::Application.quit end
