--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
+#
+# This file is part of the bovem gem. Copyright (C) 2013 and above Shogun <shogun@cowtech.it>.
+# Licensed under the MIT license, which can be found at http://www.opensource.org/licenses/mit-license.php.
+#
+
 language: ruby
 rvm:
-  - 2.0.0
-  - 2.1.0
-  - rbx-2.2.6
-script: bundle exec rake spec:coverage
+  - 2.3.0
+script: bundle exec rake spec:ci
 gemfile: .travis-gemfile
 notifications:
   email: false
+addons:
+  code_climate:
+    repo_token: bac83dc8b02f38cc87f2d3b6dab710a3b6c80cca3772687f5a6c3b8697dce9c3
