--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,6 @@
 #
 # This file is part of the devdnsd gem. Copyright (C) 2013 and above Shogun <shogun@cowtech.it>.
-# Licensed under the MIT license, which can be found at http://www.opensource.org/licenses/mit-license.php.
+# Licensed under the MIT license, which can be found at https://choosealicense.com/licenses/mit.
 #
 
 AllCops:
